<resources>
    <string name="app_name">Comanda Digital</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Comanda Digital</string>
    <string name="nav_header_subtitle">Comanda Digital</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_Cadastro">Cadastro</string>
    <string name="menu_slideshow">Mesas</string>
    <string name="menu_tools">Atendimento</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_atendimento">Atendimento</string>

    <string name="nome">Nome</string>
</resources>
